--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
 
     url: jdbc:mysql://localhost:3306/reservation?serverTimezone=Asia/Seoul
     username: root
-    password: 1q2w3e4r!!
+    password: 1234
   jpa:
     hibernate:
       ddl-auto: create
